--- a/mlruns/0/8211a5d4410645ea974e14d9821f5b75/meta.yaml
+++ b/mlruns/0/8211a5d4410645ea974e14d9821f5b75/meta.yaml
@@ -1,8 +1,9 @@
 artifact_uri: mlflow-artifacts:/0/8211a5d4410645ea974e14d9821f5b75/artifacts
-end_time: null
+deleted_time: 1692146214949
+end_time: 1692145750166
 entry_point_name: ''
 experiment_id: '0'
-lifecycle_stage: active
+lifecycle_stage: deleted
 run_id: 8211a5d4410645ea974e14d9821f5b75
 run_name: sedate-boar-709
 run_uuid: 8211a5d4410645ea974e14d9821f5b75
@@ -10,6 +11,6 @@ source_name: ''
 source_type: 4
 source_version: ''
 start_time: 1692143423478
-status: 1
+status: 4
 tags: []
 user_id: yesmi
